--- a/HelloAndroid-Sourcecode/gradle/libs.versions.toml
+++ b/HelloAndroid-Sourcecode/gradle/libs.versions.toml
@@ -1,5 +1,5 @@
 [versions]
-agp = "8.4.0"
+agp = "8.4.1"
 appcompat = "1.6.1"
 kotlin = "1.9.0"
 coreKtx = "1.10.1"
@@ -15,6 +15,10 @@ material = "1.10.0"
 activity = "1.8.0"
 gridlayout = "1.0.0"
 recyclerview = "1.3.2"
+cardview = "1.0.0"
+compiler = "5.0.0-rc01"
+glide = "5.0.0-rc01"
+annotations = "5.0.0-rc01"
 
 [libraries]
 androidx-appcompat = { module = "androidx.appcompat:appcompat", version.ref = "appcompat" }
@@ -38,6 +42,10 @@ androidx-constraintlayout = { group = "androidx.constraintlayout", name = "const
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 androidx-activity = { group = "androidx.activity", name = "activity", version.ref = "activity" }
 androidx-gridlayout = { group = "androidx.gridlayout", name = "gridlayout", version.ref = "gridlayout" }
+androidx-cardview = { group = "androidx.cardview", name = "cardview", version.ref = "cardview" }
+compiler = { group = "com.github.bumptech.glide", name = "compiler", version.ref = "compiler" }
+glide = { group = "com.github.bumptech.glide", name = "glide", version.ref = "glide" }
+annotations = { group = "com.github.bumptech.glide", name = "annotations", version.ref = "annotations" }
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
